--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body text-justify">
-                      <p class="p-2">
+                      <p class="p-2 m-0">
                         The 'Match-a-Tile' game is a memory challenge based on
                         <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info">
                           'Kim's Game'
@@ -91,31 +91,31 @@
                       <h1 class="modal-title fs-5" id="instructionsModalLabel">Instructions</h1>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body text-justify">
-											<p class="p-2">
-													Before you begin, select a difficulty Mode. The mode will determine the number of turns the player
+                    <div class="modal-body">
+											<p class="p-2 m-0">
+													Before you begin, select a difficulty mode. The mode will determine the number of turns the player
 													has to match the tiles. For example:
 											</p>
-											<ul>
+											<ul class="m-0">
 													<li>Easy: 18 turns</li>
 													<li>Normal: 14 turns</li>
 													<li>Hard: 9 turns</li>
 											</ul>
-											<p class="p-2">
+											<p class="p-2 m-0">
 													When you are ready, click 'Start' and a 5 second countdown timer will begin. At the start of the
 													countdown timer, the computer tiles will appear - take this time to remember each tile and commit
 													them to memory!
 											</p>
-											<p class="p-2">
+											<p class="p-2 m-0">
 													Once the 5 seconds are over, the computer tiles flip over and the player tiles appear. The game
 													will then begin. The player must click on a player tile at the bottom of
 													the screen and match it with the correct computer tile.
 											</p>
-											<p class="p-2">
+											<p class="p-2 m-0">
 													The game will end once all tiles have been matched, or when the number of remaining turns reaches zero.
 													Your score will then be displayed in the top right corner of the game area.
 											</p>
-											<p class="p-2">
+											<p class="p-2 m-0">
 													If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
 											</p>
                     </div>
@@ -146,7 +146,7 @@
             </button>
 
             <div id="about-text" class="border rounded w-100">
-              <p class="p-2">
+              <p class="p-2 m-0">
                 The 'Match-a-Tile' game is a memory challenge based on 
                 <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info">
                   'Kim's Game'
@@ -164,30 +164,30 @@
             </button>
             
             <div id="instructions-text" class="border rounded w-100">
-              <p class="p-2">
-                Before you begin, select a difficulty Mode. The mode will determine the number of turns the player
+              <p class="p-2 m-0">
+                Before you begin, select a difficulty mode. The mode will determine the number of turns the player
                 has to match the tiles. For example:
               </p>
-              <ul>
+              <ul class="m-0">
                 <li>Easy: 18 turns</li>
                 <li>Normal: 14 turns</li>
                 <li>Hard: 9 turns</li>
               </ul>
-              <p class="p-2">
+              <p class="p-2 m-0">
                 When you are ready, click 'Start' and a 5 second countdown timer will begin. At the start of the 
                 countdown timer, the computer tiles will appear - take this time to remember each tile and commit
                 them to memory! 
               </p>
-              <p class="p-2">
+              <p class="p-2 m-0">
                 Once the 5 seconds are over, the computer tiles flip over and the player tiles appear. The game 
                 will then begin. The player must click on a player tile at the bottom of 
                 the screen and match it with the correct computer tile. 
               </p>
-              <p class="p-2">
+              <p class="p-2 m-0">
                 The game will end once all tiles have been matched, or when the number of remaining turns reaches zero.
                 Your score will then be displayed in the top right corner of the game area.
               </p>
-              <p class="p-2">
+              <p class="p-2 m-0">
                 If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
               </p>
             </div>
