feat: added a target: _blank to the links in the About sections

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="modal-body text-justify">
                       <p class="p-2 m-0">
                         The 'Match-a-Tile' game is a memory challenge based on
-                        <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info">
+                        <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info" target="_blank">
                           'Kim's Game'
                         </a>
                         , whereby the player is shown a number of items, which are then covered after a period of time.
@@ -148,7 +148,7 @@
             <div id="about-text" class="border rounded w-100">
               <p class="p-2 m-0">
                 The 'Match-a-Tile' game is a memory challenge based on 
-                <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info">
+                <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info" target="_blank">
                   'Kim's Game'
                 </a>
                 , whereby the player is shown a number of items, which are then covered after a period of time.
