--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 								<!-- Computer Tiles -->
 								<div class="row m-0 p-0">
 									<div class="col mx-auto my-2 p-0">
-										<div id="c-tiles" class="grid-container m-0 p-0">
+										<div id="c-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
 											<button type="button" class="tile" id="c-tile-1">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
@@ -341,56 +341,56 @@
 							<!-- Player Area -->
 							<div id="player-area" class="row m-0 p-0">
 								<div class="col mx-auto m-0 mt-2 mb-2 p-0">
-									<div id="p-tiles" class="grid-container m-0 p-0">
-										<button class="tile" id="p-tile-1">
+									<div id="p-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
+										<button type="button" class="tile" id="p-tile-1">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-2">
+										<button type="button" class="tile" id="p-tile-2">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-3">
+										<button type="button" class="tile" id="p-tile-3">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-4">
+										<button type="button" class="tile" id="p-tile-4">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-5">
+										<button type="button" class="tile" id="p-tile-5">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-6">
+										<button type="button" class="tile" id="p-tile-6">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-7">
+										<button type="button" class="tile" id="p-tile-7">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-8">
+										<button type="button" class="tile" id="p-tile-8">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button class="tile" id="p-tile-9">
+										<button type="button" class="tile" id="p-tile-9">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
