feat: removed irrelevant IDs for all tiles

--- a/index.html
+++ b/index.html
@@ -278,55 +278,55 @@
 								<div class="row m-0 p-0">
 									<div class="col mx-auto my-2 p-0">
 										<div id="c-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
-											<button type="button" class="tile" id="c-tile-1">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-2">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-3">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-4">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-5">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-6">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-7">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-8">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
 												</div>
 											</button>
-											<button type="button" class="tile" id="c-tile-9">
+											<button type="button" class="tile">
 												<div class="t-inner flipped">
 													<div class="t-front"></div>
 													<div class="t-back"></div>
@@ -342,55 +342,55 @@
 							<div id="player-area" class="row m-0 p-0">
 								<div class="col mx-auto m-0 mt-2 mb-2 p-0">
 									<div id="p-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
-										<button type="button" class="tile" id="p-tile-1">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-2">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-3">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-4">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-5">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-6">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-7">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-8">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
 											</div>
 										</button>
-										<button type="button" class="tile" id="p-tile-9">
+										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
 												<div class="t-back"></div>
