--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       </p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-dark" data-bs-dismiss="modal" aria-label="Close">Close</button>
                     </div>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
 											</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-dark" data-bs-dismiss="modal" aria-label="Close">Close</button>
                     </div>
                   </div>
                 </div>
