feat: adjusted aria-label for Player Tiles

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 							<!-- Player Area -->
 							<div id="player-area" class="row m-0 p-0">
 								<div class="col mx-auto m-0 mt-2 mb-2 p-0">
-									<div id="p-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
+									<div id="p-tiles" role="group" aria-label="Player Tiles" class="grid-container m-0 p-0">
 										<button type="button" class="tile">
 											<div class="t-inner flipped">
 												<div class="t-front"></div>
