feat: changed computer/player tiles' divs to spans due to failing validation

--- a/index.html
+++ b/index.html
@@ -279,59 +279,59 @@
 									<div class="col mx-auto my-2 p-0">
 										<div id="c-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
 											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
+												<span class="t-inner flipped">
+													<span class="t-front"></span>
+													<span class="t-back"></span>
+												</span>
 											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
-											<button type="button" class="tile">
-												<div class="t-inner flipped">
-													<div class="t-front"></div>
-													<div class="t-back"></div>
-												</div>
-											</button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
+                      <button type="button" class="tile">
+                        <span class="t-inner flipped">
+                          <span class="t-front"></span>
+                          <span class="t-back"></span>
+                        </span>
+                      </button>
 										</div>
 									</div>
 								</div>
@@ -342,60 +342,60 @@
 							<div id="player-area" class="row m-0 p-0">
 								<div class="col mx-auto m-0 mt-2 mb-2 p-0">
 									<div id="p-tiles" role="group" aria-label="Player Tiles" class="grid-container m-0 p-0">
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
-										<button type="button" class="tile">
-											<div class="t-inner flipped">
-												<div class="t-front"></div>
-												<div class="t-back"></div>
-											</div>
-										</button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
+                    <button type="button" class="tile">
+                      <span class="t-inner flipped">
+                        <span class="t-front"></span>
+                        <span class="t-back"></span>
+                      </span>
+                    </button>
 									</div>
 								</div>
 							</div>
