--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       crossorigin="anonymous">
     </script>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto+Flex:wght@400;600&display=swap"
+      rel="stylesheet">
+
     <!-- jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
