feat: added aria-labels to all individual tiles

--- a/index.html
+++ b/index.html
@@ -279,55 +279,55 @@
                 <div class="row m-0 p-0">
                   <div class="col mx-auto my-2 p-0">
                     <div id="c-tiles" role="group" aria-label="Computer Tiles" class="grid-container m-0 p-0">
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 1">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 2">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 3">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 4">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 5">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 6">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 7">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 8">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
                         </span>
                       </button>
-                      <button type="button" class="tile">
+                      <button type="button" class="tile" aria-label="Computer Tile 9">
                         <span class="t-inner flipped">
                           <span class="t-front"></span>
                           <span class="t-back"></span>
@@ -343,55 +343,55 @@
               <div id="player-area" class="row m-0 p-0">
                 <div class="col mx-auto m-0 mt-2 mb-2 p-0">
                   <div id="p-tiles" role="group" aria-label="Player Tiles" class="grid-container m-0 p-0">
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 1">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 2">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 3">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 4">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 5">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 6">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 7">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 8">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
                       </span>
                     </button>
-                    <button type="button" class="tile">
+                    <button type="button" class="tile" aria-label="Player Tile 9">
                       <span class="t-inner flipped">
                         <span class="t-front"></span>
                         <span class="t-back"></span>
