feat: added aria-label to navbar logo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <!-- Header/Logo -->
             <div id="header" class="col-sm-7 p-0 mb-0 mt-2 my-sm-2 d-flex align-items-center justify-content-center mx-auto">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="#" aria-label="Match-a-Tile Logo">
                 <div id="logo" class="mx-2 tile"></div>
               </a>
               <h1 class="my-0 mx-2">Match-a-Tile</h1>
