--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Match-a-Tile is a memory challenge game where the player has 5 seconds to memorise 
+    9 images and then try to remember them by matching their tiles with the computer's tiles.">
+ 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
