feat: removed irrelevant anchor tags from mode selection drop-down

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
                     Mode
                   </button>
                   <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item mode-item" data-value="Easy">Easy</a></li>
-                    <li><a class="dropdown-item mode-item" data-value="Normal">Normal</a></li>
-                    <li><a class="dropdown-item mode-item" data-value="Hard">Hard</a></li>
+                    <li class="dropdown-item mode-item" data-value="Easy">Easy</li>
+                    <li class="dropdown-item mode-item" data-value="Normal">Normal</li>
+                    <li class="dropdown-item mode-item" data-value="Hard">Hard</li>
                   </ul>
                 </div>
 
