feat: added game over modal

--- a/index.html
+++ b/index.html
@@ -238,6 +238,23 @@
                     <span id="end-game-msg"></span>
                   </p>
                 </div>
+                <!-- Game Over Modal -->
+                <div class="modal fade" id="gameOverModal" tabindex="-1" aria-labelledby="gameOverModal" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="gameOverModal">GAME OVER</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p class="p-2 m-0 text-center" id="final-score-message"></p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal" aria-label="Close">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <!-- Computer Tiles -->
                 <div class="row m-0 p-0">
                   <div class="col mx-auto my-2 p-0">
